tests/pyconverter-test/errors/nonlocal_no_binding.py
def who():
    def whatever():
        nonlocal a # 9523
        if True:
            a = 2
        else:
            a = 3